# Verus

./: .env.example  .gitignore  BUILD_GUIDE.md  BUILD_REMAINING.md  CLAUDE.md  FRONTEND_SPEC.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
circuits/: README.md  input_invalid.json  input_valid.json  proof_invalid.json  proof_valid.json  public_invalid.json  public_valid.json  reserveProof.circom  setup.sh  verification_key.json
contracts/verus_verifier/: Cargo.toml  README.md
contracts/verus_verifier/src/: lib.rs  test.rs
contracts/verus_verifier/test_snapshots/test/: test_initialize_then_verify_real_proof.1.json  test_threshold_mismatch_is_rejected.1.json
docs/: APP_BLUEPRINT.md  MARKETING.md
public/circuits/: reserveProof.wasm  reserveProof.zkey
public/images/: README.md
scripts/: deploy-and-init.ts  deploy-contract.ts  init-contract.ts
src/: App.tsx  vite-env.d.ts
src/components/layout/: AppNav.tsx  GhostNav.tsx
src/components/sections/: GeometricGrid.tsx  Hero.tsx  IssuerWall.tsx  ProofStatement.tsx  ProtocolStrip.tsx  TerminalCta.tsx  TrustEquation.tsx
src/components/ui/: BlurText.tsx  FadeIn.tsx  GrainOverlay.tsx
src/hooks/: useReserveProof.ts  useSorobanVerifier.ts  useStellarWallet.ts
src/lib/: circuit.ts  encoding.ts  stellar.ts  utils.ts
src/pages/: About.tsx  Dashboard.tsx  Issuers.tsx  Landing.tsx  Verify.tsx
src/store/: useAppStore.ts
src/styles/: globals.css
src/types/: index.ts  snarkjs.d.ts
